force-app/main/default/objects/Moblie__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>LG</fullName>
                </value>
                <value>
                    <fullName>Sony</fullName>
                </value>
                <value>
                    <fullName>Samsung</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Avialable__c</fullName>
        <defaultValue>&apos;No Sale&apos;</defaultValue>
        <label>Discount Avialable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Christmas</fullName>
                </value>
                <value>
                    <fullName>Black Friday</fullName>
                </value>
                <value>
                    <fullName>No Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Moblie</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>M-{00000}</displayFormat>
        <label>Moblie Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mobile</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>